--- a/app/views/backend/admin/customer_invoices/index.html.haml
+++ b/app/views/backend/admin/customer_invoices/index.html.haml
@@ -10,10 +10,10 @@
     %h2 Customer Invoices
 .row
   .col-md-6.col-sm-6
-    %a#add-note.btn.btn-md.btn-primary.btn-icon.icon-left.pull-left{href: "#{new_admin_customer_invoice_path}" , style: 'margin-top: 15px !important;'}
+    = link_to  new_admin_customer_invoice_path , remote: true , class: 'btn btn-md btn-primary btn-icon icon-left pull-left', style: 'margin-top: 15px !important;' do
       %i.entypo-plus
       New Invoice
-  .col-md-6.col-sm-6
+  -#.col-md-6.col-sm-6
     .search-form-contaner
       = search_form_for @search , url: search_admin_customers_path , method: :post , class: 'search-form-full' do |f|
         .form-group
@@ -24,27 +24,15 @@
   %hr
   .line
   .col-md-12
-    %table.table.table-responsive.image-table
+    %table.table.table-responsive.image-table#invoice_table
       %thead
         %tr
-          %th ID
           %th NAME
           %th Issue Date
           %th Due Date
-          -#%th Sent
-          -#%th Status
-          -#%th Pending
           %th Total
           %th.text-center Actions
       %tbody
         - @invoices.each do |invoice|
-          %tr
-            %td= invoice.identifier
-            %td= invoice.recipient.profile_link
-            %td= invoice.formatted_issue_date
-            %td= invoice.formatted_due_date
-            %td= invoice.formatted_total_amount
-            %td.text-center
-              = invoice.edit_button_link
-              = invoice.delete_button_link
-              = invoice.download_link
+          = invoice.row
+        = render_pagination @invoices
