--- a/app/views/backend/admin/customer_invoices/partials/_form.html.haml
+++ b/app/views/backend/admin/customer_invoices/partials/_form.html.haml
@@ -1,4 +1,5 @@
-= form_for [:admin ,invoice ] , class: 'form-horizontal form-groups-bordered validate' , html: {novalidate: "novalidate"} do |f|
+
+-#= form_for [:admin ,invoice ] , id: 'invoice-form' ,class: 'form-horizontal form-groups-bordered validate' , html: {novalidate: "novalidate"} do |f|
   .row
     .col-md-12
       .panel.panel-primary{"data-collapsed" => "0"}
