--- a/app/views/backend/admin/invoices/show.html.haml
+++ b/app/views/backend/admin/invoices/show.html.haml
@@ -1,13 +1,3 @@
-%ol.breadcrumb.bc-2.hidden-print
-  %li
-    %a{:href => "#{root_path}"}
-      %i.fa-home>
-      Home
-  %li
-    = link_to "Customer Invoices" , admin_customer_invoices_path
-  %li.active
-    %strong= @invoice.identifier
-%br.hidden-print/
 .invoice
   .row
     .col-sm-6.invoice-left
@@ -47,7 +37,7 @@
     %thead
       %tr
         %th.text-center TITLE
-        %th DURATION
+        %th START
         %th QTY
         %th RATE
         %th AMOUNT
@@ -55,7 +45,7 @@
       - @invoice.line_items.each do |line_item|
         %tr
           %td.text-center= line_item.event.title
-          %td= line_item.event.duration
+          %td= line_item.event.formatted_start_date
           %td= line_item.quantity
           %td.text-right= amount_in_currency line_item.event.event_cost
           %td.text-right= amount_in_currency line_item.total_amount
