--- a/app/views/backend/admin/customer_invoices/edit.html.haml
+++ b/app/views/backend/admin/customer_invoices/edit.html.haml
@@ -29,6 +29,7 @@
             %i.entypo-user-add
             Preview
           = @invoice.download_button
+          = @invoice.updated_button
     %section.profile-info-tabs
       .row
         .col-sm-offset-2.col-sm-10
