--- a/app/views/backend/admin/customer_invoices/edit.html.haml
+++ b/app/views/backend/admin/customer_invoices/edit.html.haml
@@ -25,10 +25,8 @@
                 %a{:href => "#"} Closed
       .col-sm-3
         .profile-buttons
-          %a.btn.btn-default{:href => "#"}
-            %i.entypo-user-add
-            Preview
-          = @invoice.download_button
+          = @invoice.preview_button
+          -#= @invoice.download_button
           = @invoice.updated_button
     %section.profile-info-tabs
       .row
