--- a/app/views/layouts/pdf.html.haml
+++ b/app/views/layouts/pdf.html.haml
@@ -6,22 +6,10 @@
     %meta{:content => "”width=device-width,", "initial-scale" => "1″", :name => "”viewport”"}/
     %title Invoices
     -#= stylesheet_link_tag wicked_pdf_asset_base64('backend.scss')
-    = stylesheet_link_tag "http://#{request.host_with_port}/#{asset_path('backend.scss')}" , rel: "stylesheet" , media: "all"
+    = stylesheet_link_tag "http://#{request.host_with_port}#{asset_path('backend.scss')}" , rel: "stylesheet" , media: "all"
     = wicked_pdf_javascript_include_tag 'backend'
-    -#= render 'backend/shared/head'
 
   %body.page-body.page-fade
     .page-container
       .main-content
         = yield
-  -#= render 'backend/shared/javascripts'
-
--#!!! 5
--#%html.no-js
-  = render 'backend/shared/head'
-  %body.page-body.page-fade
-    .page-container
-      .main-content
-        = yield
-        = render 'backend/shared/footer'
-    = render 'backend/shared/javascripts'
