--- a/app/assets/stylesheets/backend.scss
+++ b/app/assets/stylesheets/backend.scss
@@ -134,3 +134,8 @@ padding-top: 35px!important;
 .datepicker.datepicker-dropdown {
   z-index: 10001 !important;
 }
+.form-group.required .control-label:after {
+  content:"*";
+  color:red;
+  margin-left: 3px;
+}
