--- a/app/views/backend/admin/invoices/partials/_modal.html.haml
+++ b/app/views/backend/admin/invoices/partials/_modal.html.haml
@@ -6,30 +6,30 @@
         %h4#myModalLabel.modal-title= invoice.modal_title
       = form_for([:admin ,invoice ] , as: :invoice, remote: true, html: {class: 'ajax validate' ,role: :form, 'data-model': 'invoice'}) do |f|
         .modal-body
-          .form-group
+          .form-group.required
             = f.label :customer, class: 'control-label'
             %br/
             = f.select :recipient_id, @recipients.collect { |s| [s.full_name, s.id] } , {prompt: 'Select Customer(s)'} , class: "form-control" , data: {"validate": "required" , "message-required": "This is custom message for required field."}
             %span.help-block
-          .form-group
+          .form-group.required
             = f.label "Invoicing Month", class: 'control-label'
             %br/
-            = f.text_field :period_start, class: 'form-control' , data: {"validate": "required" ,"message-required": "This is custom message for required field."}
+            = f.text_field :period_start, class: 'form-control' , placeholder: 'dd/mm/yyyy' , data: {"validate": "required" ,"message-required": "This is custom message for required field."}
             %span.help-block
-          .form-group
+          .form-group.required
             = f.label :issue_date, class: 'control-label'
             %br/
-            = f.text_field :issue_date, class: 'form-control datepicker'
+            = f.text_field :issue_date, class: 'form-control datepicker' , placeholder: 'dd/mm/yyyy'
             %span.help-block
-          .form-group
+          .form-group.required
             = f.label :due_date, class: 'control-label'
             %br/
-            = f.text_field :due_date, class: 'form-control datepicker'
+            = f.text_field :due_date, class: 'form-control datepicker' , placeholder: 'dd/mm/yyyy'
             %span.help-block
           .form-group
             = f.label :description, class: 'control-label'
             %br/
-            = f.text_area :description, class: 'form-control'
+            = f.text_area :description, class: 'form-control' , placeholder: 'Please write something. ..'
             %span.help-block
         .modal-footer
           = f.button "Submit", class: "btn btn-large btn-danger", "data-disable-with" => "Submitting.."
