datepicker issue resolved

--- a/app/assets/stylesheets/backend.scss
+++ b/app/assets/stylesheets/backend.scss
@@ -132,7 +132,7 @@ padding-top: 35px!important;
   }
 }
 .datepicker.datepicker-dropdown {
-  z-index: 10001 !important;
+  z-index: 10000001 !important;
 }
 .form-group.required .control-label:after {
   content:"*";
