add invoice month column

--- a/app/views/backend/admin/customer_invoices/index.html.haml
+++ b/app/views/backend/admin/customer_invoices/index.html.haml
@@ -28,6 +28,7 @@
       %thead
         %tr
           %th NAME
+          %th Invoicing Month
           %th Issue Date
           %th Due Date
           %th Total
