--- a/app/views/backend/admin/events/partials/_wizard.html.haml
+++ b/app/views/backend/admin/events/partials/_wizard.html.haml
@@ -29,10 +29,9 @@
     #tab2-1.tab-pane.active
       .row
         .col-md-12
-          .form-group
+          .form-group.required
             %label.control-label{:for => "full_name"}
               Job Title
-              %span.text-danger *
             =f.text_field :title , class: 'form-control' , placeholder: 'Job Title' , required: true
       .row
         .col-md-6
@@ -61,10 +60,9 @@
     #tab2-2.tab-pane
       .row
         .col-md-12
-          .form-group
+          .form-group.required
             %label.control-label{:for => "customer"}
               Cutomer
-              %span.text-danger *
             = f.select :customer_id, Customer.all.collect { |s| [s.first_name, s.id] } , {prompt: 'Select Customer(s)'} , class: "form-control" , data: {"validate": "required" , "message-required": "This is custom message for required field."}
       .row
         .col-md-8
