--- a/app/views/backend/admin/customers/edit.html.haml
+++ b/app/views/backend/admin/customers/edit.html.haml
@@ -11,4 +11,4 @@
   %li.active
     %strong New
 %br/
-= render 'backend/admin/customers/partials/form'
+= render 'backend/admin/customers/partials/form' , customer: @customer
