--- a/app/views/backend/admin/customers/partials/_form.html.haml
+++ b/app/views/backend/admin/customers/partials/_form.html.haml
@@ -1,63 +1,6 @@
--#= simple_form_for  [:admin ,@customer ] do |f|
-  -#= f.input :username, label: 'Your username please', error: 'Username is mandatory, please specify one'
-  -#= f.input :password, hint: 'No special characters.'
-  = f.input :email, placeholder: 'user@domain.com'
-  -#= f.input :remember_me, inline_label: 'Yes, remember me'
-  = f.button :submit , class: 'btn btn-success'
-= form_for [:admin ,@customer ] , validate: true do |f|
-  .row
-    .col-md-12
-      .panel.panel-primary{"data-collapsed" => "0"}
-        .panel-heading
-          .panel-title
-            Customers Details
-          .panel-options
-            %a{"data-rel" => "collapse", :href => "#"}
-              %i.entypo-down-open
-            %a{"data-rel" => "reload", :href => "#"}
-              %i.entypo-arrows-ccw
-        .panel-body{:style => "display: block;"}
-
-          .tab-content
-            #tab2-1.tab-pane.active
-              .row
-                .col-md-6
-                  .form-group
-                    %label.control-label{:for => "full_name"} First name
-                    =f.text_field :first_name , class: 'form-control' , placeholder: 'Enter first name' , data: {"validate": "required"}
-                .col-md-6
-                  .form-group
-                    %label.control-label{:for => "full_name"} Last name
-                    =f.text_field :last_name , class: 'form-control' , placeholder: 'Enter last name' , data: {"validate": "required"}
-              .row
-                .col-md-12
-                  .form-group
-                    %label.control-label{:for => "full_name"} Email
-                    =f.email_field :email , class: 'form-control' , placeholder: 'Enter email' , data: {"validate": "required"}
-              .row
-                .col-md-6
-                  .form-group
-                    %label.control-label{:for => "full_name"} Gender
-                    = f.select :gender, options_for_select(Customer.genders.collect { |s| [s[0].humanize, s[0]] }), {} , class: "form-control"
-                .col-md-6
-                  .form-group
-                    %label.control-label{:for => "full_name"} Telephone
-                    =f.text_field :phone , class: 'form-control' , placeholder: 'Enter phone' , data: {"validate": "required"}
-              .row
-                .col-md-12
-                  .form-group
-                    %label.control-label{:for => "full_name"} Address
-                    =f.text_field :street , class: 'form-control' , placeholder: 'Enter street address' , data: {"validate": "required"}
-              .row
-                .col-md-6
-                  .form-group
-                    %label.control-label{:for => "full_name"} City
-                    =f.text_field :city , class: 'form-control' , placeholder: 'Enter city name' , data: {"validate": "required"}
-                .col-md-6
-                  .form-group
-                    %label.control-label{:for => "full_name"} Postal Code
-                    =f.text_field :postcode , class: 'form-control' , placeholder: 'Enter postcode' , data: {"validate": "required"}
-
-        .form-group.default-padding.pull-right{style: 'margin-top: 15px;'}
-          = f.submit "Submit" , class: 'btn btn-success'
-          %button.btn{:type => "reset"} Reset
+= form_for([:admin ,customer ] , remote: true, html: {class: 'ajax' ,role: :form, 'data-model': 'customer'}) do |form|
+  .modal-body
+    = render 'backend/admin/customers/partials/fields' , f: form
+  .modal-footer
+    = form.button "Submit", class: "btn btn-large btn-danger", "data-disable-with" => "Submitting.."
+    %button.btn.btn-default{"data-dismiss" => "modal", :type => "button"} Close
