--- a/app/views/backend/admin/invoices/partials/_modal.html.haml
+++ b/app/views/backend/admin/invoices/partials/_modal.html.haml
@@ -9,23 +9,26 @@
           .form-group.required
             = f.label :customer, class: 'control-label'
             %br/
-            = f.select :recipient_id, @recipients.decorate.collect { |s| [s.full_name, s.id] } , {prompt: 'Select Customer(s)'} , required: true , class: "form-control" , data: {"validate": "required" , "message-required": "This is custom message for required field."}
+            = f.select :recipient_id, @recipients.decorate.collect { |s| [s.full_name, s.id] } , {prompt: 'Select Customer(s)'} , required: true , class: "form-control"
             %span.help-block
           .form-group.required
             = f.label "Invoicing Month", class: 'control-label'
             %br/
-            = f.text_field :period_start, class: 'form-control' , placeholder: 'dd/mm/yyyy' , data: {"validate": "required" ,"message-required": "This is custom message for required field."}
+            = f.text_field :period_start, class: 'form-control' , placeholder: 'dd/mm/yyyy'
             %span.help-block
-          .form-group.required
-            = f.label :issue_date, class: 'control-label'
-            %br/
-            = f.text_field :issue_date, class: 'form-control datepicker' , placeholder: 'dd/mm/yyyy'
-            %span.help-block
-          .form-group.required
-            = f.label :due_date, class: 'control-label'
-            %br/
-            = f.text_field :due_date, class: 'form-control datepicker' , placeholder: 'dd/mm/yyyy'
-            %span.help-block
+          .row
+            .col-md-6.col-sm-12
+              .form-group.required
+                = f.label :issue_date, class: 'control-label'
+                %br/
+                = f.text_field :issue_date, class: 'form-control datepicker' , placeholder: 'dd/mm/yyyy'
+                %span.help-block
+            .col-md-6.col-sm-12
+              .form-group.required
+                = f.label :due_date, class: 'control-label'
+                %br/
+                = f.text_field :due_date, class: 'form-control datepicker' , placeholder: 'dd/mm/yyyy'
+                %span.help-block
           .form-group
             = f.label :description, class: 'control-label'
             %br/
