set customer invoices show page

--- a/app/views/backend/admin/invoices/partials/_table_row.html.haml
+++ b/app/views/backend/admin/invoices/partials/_table_row.html.haml
@@ -5,6 +5,6 @@
   %td= invoice.formatted_due_date
   %td= invoice.formatted_total_amount
   %td.text-center
-    = invoice.edit_button_link
+    = invoice.show_link
     = invoice.delete_button_link
     -#= invoice.download_link
