--- a/app/views/backend/admin/customer_invoices/partials/_invoice_body.html.haml
+++ b/app/views/backend/admin/customer_invoices/partials/_invoice_body.html.haml
@@ -42,7 +42,7 @@
         %th RATE
         %th AMOUNT
     %tbody
-      - @invoice.line_items.each do |line_item|
+      - @invoice.line_items.includes(:event).each do |line_item|
         %tr
           %td.text-center= line_item.event.title
           %td= line_item.event.duration
@@ -68,11 +68,3 @@
           %li
             Total Due:
             %strong= @invoice.formatted_total_amount
-        %br/
-        %a.btn.btn-primary.btn-icon.icon-left.hidden-print{:href => "javascript:window.print();"}
-          Print Invoice
-          %i.entypo-doc-text
-         
-        %a.btn.btn-success.btn-icon.icon-left.hidden-print{:href => "mailbox-compose.html"}
-          Send Invoice
-          %i.entypo-mail
